# cv_study

./: .gitignore
laba1/: CMakeLists.txt  main.cpp  readme.md
laba1/src/: tank.cpp  tank.hpp  telega.cpp  telega.hpp
laba2/: CMakeLists.txt  README.md  main.cpp
laba2/src/: filters.cpp  filters.hpp
laba3/: CMakeLists.txt  README.md  begun.cpp  main.cpp
laba3/src/: gk.cpp  gk.hpp  robots.cpp  robots.hpp  teplovisor.cpp  teplovisor.hpp
laba4/: CMakeLists.txt  README.md  main.cpp
laba4/src/: custom_fourier.cpp  custom_fourier.h  pipeline.cpp  pipeline.h
laba5/: CMakeLists.txt  calibrate_camera.cpp  createTag.cpp  main.cpp  readme.md
laba5/calibration_utilities/: calibrate_camera.cpp  create_board.cpp  create_tag.cpp
laba5/config/: calibration.xml  calibration.yml
laba5/src/: cube_utility.cpp  cube_utility.h  custom_utility.cpp  custom_utility.h
